--- a/Update Manager Library/Properties/Resources.resx
+++ b/Update Manager Library/Properties/Resources.resx
@@ -121,7 +121,7 @@
   <data name="Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Updater_Manager" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Updater Manager.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="Update_Manager_Worker" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Update Manager Worker.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
